--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <div class="container">
                     <div class="wraper-menu">
-                            <div class="logo">
+                            <div class="logo"data-aos="zoom-in-left"data-aos-duration="3000">
                                <img src="assets/barbearia.png" alt="barbearia">
                                <h3>Barbe Shop</h3>
                             </div><!--logo-->
