--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="container">
                     <div class="wraper-menu">
-                            <div class="logo" data-aos="zoom-in-left" data-aos-duration="3000">d
+                            <div class="logo" data-aos="zoom-in-up" data-aos-duration="3000">
                                <img src="assets/barbearia.png" alt="barbearia">
                                <h3>Barbe Shop</h3>
                             </div><!--logo-->
