--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                <img src="assets/barbearia.png" alt="barbearia">
                                <h3>Barbe Shop</h3>
                             </div><!--logo-->
-                            <nav class="menu-desktop"data-aos="zoom-in-left"data-aos-duration="3000" >
+                            <nav class="menu-desktop" data-aos="zoom-in-up" data-aos-duration="3000" >
                                 <ul>
                                     <li><a style="color: rgb(206, 119, 6);" href="#">Página inícial</a></li>
                                     <li><a href="#">Quem somos</a></li>
