--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="title-banner">
             <div class="container">
                     <h3>- Barbe Shop - </h3>
-                    <div class="flex-banner">
+                    <div class="flex-banner" data-aos="zoom-in-down" data-aos-duration="3000" >
                             <h2> O Seu Portal para o Estilo  com Atitude! </h2>
                             <button class="btn-1">
                                 <span>Entra em contato</span>
