--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         </div><!--container-->
         
 </header>
-        <div class="title-banner">
+        <div class="title-banner" data-aos="zoom-in-down" data-aos-duration="3000" >
             <div class="container">
                     <h3>- Barbe Shop - </h3>
-                    <div class="flex-banner" data-aos="zoom-in-down" data-aos-duration="3000" >
+                    <div class="flex-banner" >
                             <h2> O Seu Portal para o Estilo  com Atitude! </h2>
                             <button class="btn-1">
                                 <span>Entra em contato</span>
