--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div><!--container-->
         
 </header>
-        <div class="title-banner" data-aos="zoom-in-down" data-aos-duration="3000" >
+        <div class="title-banner" data-aos="zoom-in-left" data-aos-duration="3000">
             <div class="container">
                     <h3>- Barbe Shop - </h3>
                     <div class="flex-banner" >
