--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
    <!--section-sobre-->
    <section class="sobre">
             <div class="container">
-                    <div class="wraper-sobre">
+                    <div class="wraper-sobre" data-aos="zoom-in-up" data-aos-duration="3000" >
                           <div class="img-sobre">
                             <img src="assets/sobre.png" alt="sobre">
                           </div><!--img-sobre-->
