--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
    <!--section-serviços-->
    <section class="services">
                 <div class="container">
-                        <div class="title-services">
+                        <div class="title-services" data-aos="zoom-in-up" data-aos-duration="3000" >
                               <h2>Nossos serviços</h2>
                        </div><!--title-services-->
-                        <div class="wraper-services">
+                        <div class="wraper-services" data-aos="zoom-in-up" data-aos-duration="3000" >
                             <div class="work-1">
                                <h3>Corte de cabelo  Disfarçado</h3>
                              <button class="btn-4">
@@ -138,10 +138,10 @@
    <!--section-galeria-->
    <section class="galeria">
             <div class="container">
-                 <div class="title-galeria">
+                 <div class="title-galeria" data-aos="zoom-in-up" data-aos-duration="3000" >
                      <h2>Galeria</h2>
                  </div><!--title-galeria-->
-                 <div class="wraper-galeria">
+                 <div class="wraper-galeria" data-aos="zoom-in-up" data-aos-duration="3000" >
                             <div class="card-1">
                                 <img src="assets/card-1.png" alt="card-1">
                             </div><!--card-1-->
@@ -172,7 +172,7 @@
                 <div class="title-contato">
                     <h2>Contato</h2>
               </div><!--title-contato-->
-                        <div class="wraper-contato">
+                        <div class="wraper-contato" data-aos="zoom-in-up" data-aos-duration="3000" >
                                     <div class="form-contato">
                                             <form class="login">
                                                   <div class="inputs-text">
@@ -192,7 +192,7 @@
    </section><!--contato-->
    <footer class="rodape">
             <div class="container">
-                    <div class="wraper-rodape">
+                    <div class="wraper-rodape" data-aos="zoom-in-down"data-aos-duration="3000">
                         <div class="map">
                             <iframe width="100%" height="500px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=754&amp;height=424&amp;hl=en&amp;q=S%C3%A3o%20paulo%20s%C3%A3o%20paulo+(Meu%20local)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href='https://maps-generator.com/'></a>
                         </div><!--google.maps-->
@@ -230,7 +230,7 @@
    </footer><!--rodape-->
    <footer class="footer-2">
             <div class="container">
-                        <div class="Wraper-footer-2">
+                        <div class="Wraper-footer-2" data-aos="zoom-in-dow" data-aos-duration="3000" >
                                     <div class="text-footer-2">
                                         <p>Todos os direitos reservados!</p>
                                         <div class="icon-whatsapp">
