--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <div class="icon-logo">
                           <img src="assets/barbearia.png" alt="barbearia">
                         </div><!--icon-logo-->
-                        <div class="flex-gerais">
+                        <div class="flex-gerais"data-aos="zoom-in-down"data-aos-duration="3000" >
                             <div class="info-1">
                                 <h3>Fale conosco</h3>
                                 <p><i class="bi bi-telephone"></i>(21)999-999-999</p>
@@ -230,7 +230,7 @@
    </footer><!--rodape-->
    <footer class="footer-2">
             <div class="container">
-                        <div class="Wraper-footer-2" data-aos="zoom-in-dow" data-aos-duration="3000" >
+                        <div class="Wraper-footer-2" data-aos="zoom-in-down" data-aos-duration="3000 >
                                     <div class="text-footer-2">
                                         <p>Todos os direitos reservados!</p>
                                         <div class="icon-whatsapp">
