--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 <img src="assets/card-3.png" alt="card-3">
                             </div><!--card-3-->
                 </div><!--wraper-galeria-->
-                <div class="wraper-galeria-2">
+                <div class="wraper-galeria-2"data-aos="zoom-in-down" data-aos-duration="3000" >
                         <div class="card-4">
                              <img src="assets/card-4.png" alt="card-4">
                         </div><!--card-4-->
@@ -169,7 +169,7 @@
    <!--section-contato-->
    <section class="contato">
             <div class="container">
-                <div class="title-contato">
+                <div class="title-contato"data-aos="zoom-in-down" data-aos-duration="3000" >
                     <h2>Contato</h2>
               </div><!--title-contato-->
                         <div class="wraper-contato" data-aos="zoom-in-up" data-aos-duration="3000" >
@@ -230,7 +230,7 @@
    </footer><!--rodape-->
    <footer class="footer-2">
             <div class="container">
-                        <div class="Wraper-footer-2" data-aos="zoom-in-down" data-aos-duration="3000 >
+                        <div class="Wraper-footer-2" data-aos="zoom-in-down" data-aos-duration="3000" >
                                     <div class="text-footer-2">
                                         <p>Todos os direitos reservados!</p>
                                         <div class="icon-whatsapp">
