--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
    </footer><!--rodape-->
    <footer class="footer-2">
             <div class="container">
-                        <div class="Wraper-footer-2" data-aos="zoom-in-up" data-aos-duration="3000" >
+                        <div class="Wraper-footer-2" data-aos="zoom-in" data-aos-duration="3000" >
                                     <div class="text-footer-2">
                                         <p>Todos os direitos reservados!</p>
                                         <div class="icon-whatsapp">
