--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
    </footer><!--rodape-->
    <footer class="footer-2">
             <div class="container">
-                        <div class="Wraper-footer-2"  data-aos="fade-up" data-aos-duration="3000" >
-                                    <div class="text-footer-2">
+                        <div class="Wraper-footer-2">
+                                    <div class="text-footer-2"data-aos="fade-up" >
                                         <p>Todos os direitos reservados!</p>
-                                        <div class="icon-whatsapp">
+                                        <div class="icon-whatsapp"data-aos="fade-up" >
                                             <i class="bi bi-whatsapp"></i>
                                         </div><!--icon-whatsapp-->
                                     </div><!--text-footer-2-->
