--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
    <footer class="footer-2">
             <div class="container">
                         <div class="Wraper-footer-2">
-                                    <div class="text-footer-2"data-aos="fade-up" >
+                                    <div class="text-footer-2">
                                         <p>Todos os direitos reservados!</p>
-                                        <div class="icon-whatsapp"data-aos="fade-up" >
+                                        <div class="icon-whatsapp" >
                                             <i class="bi bi-whatsapp"></i>
                                         </div><!--icon-whatsapp-->
                                     </div><!--text-footer-2-->
